[package]
name = "CS50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
druid = { version = "0.8.3", features = ["im"] }
im = "15.1.0"
serde = { version = "1.0.156", feature = "derive" }
serde_json = {version = "1.0.59"}

[[bin]]
name = "CS50"
path = "main.rs"
